# sage-finance-os

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REBUILD_MASTER_PLAN.md  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  main.py
app/analysis/: aging.py  close_support.py  profitability.py  variance.py
app/auth/: middleware.py  tokens.py
app/contract/: writer.py
app/core/: crypto.py  db.py  db_sync.py  deps.py  errors.py  migration_runner.py  tenant.py
app/observability/: logging_config.py
app/pipeline/: runner.py
app/quality/: checks.py  gate.py
app/semantic/: account_classifier.py  kpi_engine.py  metric_registry.py  period_engine.py  statement_templates.py
app/trust/: certificate.py  circuit_breaker.py  envelope.py  scorecard.py
app/workflows/: event_bus.py  kill_switch.py  scheduler.py
docs/: HANDOFF.md
docs/adversarial-review/: 00-consolidated-findings.md  00-full-repo-verdict.md  00-module-index.md  01-auth-access-control.md  02-data-api-layer.md  03-analysis-engine.md  04-credentials.md  05-pipeline-writers.md  06-trust-quality.md  07-database-schema.md  08-dead-code.md
scripts/: run_full_pipeline.py  seed_demo_data.py
sql/: seed_demo.sql
sql/migrations/: 001_schemas.sql  002_platform.sql  003_staging.sql  004_contract.sql  005_audit.sql  006_workflow.sql  007_semantic.sql
tests/: conftest.py  test_api_health.py
tests/unit/: test_account_classifier.py  test_certificate.py  test_circuit_breaker.py  test_migration_runner.py  (+5 more)
ui/: netlify.toml  next.config.ts  package-lock.json  package.json
(+72 files in other folders)
