[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-finance-os"
version = "0.1.0"
description = "Finance intelligence platform for Sage Intacct"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Async database (API layer)
    "asyncpg>=0.29.0",
    # Sync database (pipeline layer)
    "psycopg2-binary>=2.9.9",
    # HTTP client
    "httpx>=0.27.0",
    # Data profiling
    "duckdb>=1.0.0",
    # Quality gate
    "great-expectations>=1.0.0",
    "pandas>=2.0.0",
    # XML parsing (Sage Intacct)
    "xmltodict>=0.13.0",
    "lxml>=5.0.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Observability
    "structlog>=24.0.0",
    # CORS + middleware
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "httpx",  # for TestClient
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
